# MasteringAlgorithms

./: CMakeLists.txt  LICENSE  README.md  main.c
MasteringAlgorithms/: Prepare.cpp  Prepare.hpp  linkedlist.c  linkedlist.h  main.c  main.cpp
MasteringAlgorithms.xcodeproj/: project.pbxproj
MasteringAlgorithms.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MasteringAlgorithms.xcodeproj/project.xcworkspace/xcuserdata/Moch.xcuserdatad/: UserInterfaceState.xcuserstate
MasteringAlgorithms.xcodeproj/xcuserdata/Moch.xcuserdatad/xcschemes/: MasteringAlgorithms.xcscheme  xcschememanagement.plist
MasteringAlgorithms/MasteringAlgorithms/: linkedlist.c  linkedlist.h  prepare.c  prepare.h
MasteringAlgorithms/MasteringAlgorithms.xcodeproj/: project.pbxproj
MasteringAlgorithms/MasteringAlgorithms.xcodeproj/project.xcworkspace/xcuserdata/Moch.xcuserdatad/: UserInterfaceState.xcuserstate
MasteringAlgorithms/linkedlist/: circularlinkedlist.h  doublylinkedlist.c  doublylinkedlist.h  frame.h  linkedlist.c  linkedlist.h  replacepage.c  replacepage.h
MasteringAlgorithms/prepare/: prepare.c
linkedlist/: circularlinkedlist.c  circularlinkedlist.h  doublylinkedlist.c  doublylinkedlist.h  frame.c  linkedlist.c  linkedlist.h  replacepage.c  replacepage.h
queue/: queue.c  queue.h
set/: set.c  set.h
stack/: stack.c  stack.h
test/: frame.c  frame.h  linkedlist_test.c  linkedlist_test.h  queue_test.c  queue_test.h  replacepage.c  replacepage.h  stack_test.c  stack_test.h
